name:                 tkyprof
version:              0.0.2
license:              BSD3
license-file:         LICENSE
author:               Mitsutoshi Aoe
maintainer:           Mitsutoshi Aoe <maoe@foldr.in>
synopsis:             A visualizer for GHC Profiling Reports
description:          A visualizer for GHC Profiling Reports
category:             Development
stability:            Experimental
cabal-version:        >= 1.6
build-type:           Simple
homepage:             https://github.com/maoe/tkyprof

flag production
  description:        Build the production executable.
  default:            False

flag web
  description:        Build the production executable.
  default:            True

flag devel
  description:        Build for use with "yesod devel"
  default:            False

executable tkyprof
  if flag(devel)
    buildable:        False

  if flag(production)
    if flag(web)
      ghc-options:      -Wall -threaded -O2 -fno-warn-unused-do-bind
      cpp-options:    -DWEB
    else
      cpp-options:    -DPRODUCTION
      ghc-options:    -Wall -fno-warn-unused-do-bind -pgmc g++ -pgml g++
      pkgconfig-depends: QtWebKit
      build-depends:  wai-handler-webkit
  else
    ghc-options:      -Wall -threaded

  main-is:            bin/tkyprof.hs
  hs-source-dirs:     ., config, bin

  build-depends:      base >= 4 && < 5
                    , aeson >= 0.3 && < 0.4
                    , attoparsec >= 0.9 && < 0.10
                    , attoparsec-enumerator >= 0.2 && < 0.3
                    , bytestring >= 0.9 && < 0.10
                    , containers < 0.5
                    , directory < 2
                    , enumerator >= 0.4 && < 0.5
                    , hamlet >= 0.8 && < 0.10
                    , rosezipper >= 0.2 && < 0.3
                    , stm < 3
                    , template-haskell < 3
                    , text >= 0.11 && < 0.12
                    , time >= 1.2 && < 1.3
                    , transformers >= 0.2 && < 0.3
                    , wai >= 0.4 && < 0.5
                    , wai-extra >= 0.4 && < 0.5
                    , warp >= 0.4 && < 0.5
                    , web-routes >= 0.23 && < 0.26
                    , yesod-core >= 0.8 && < 0.9
                    , yesod-form >= 0.1 && < 0.2
                    , yesod-json >= 0.1 && < 0.2
                    , yesod-static >= 0.1 && < 0.2
  ghc-options:        -Wall -threaded

library
  if flag(devel)
    buildable:        True
  else
    buildable:        False
  exposed-modules:    Controller
  hs-source-dirs:     ., config, bin
  other-modules:      TKYProf
                      Handler.Home
                      Handler.Reports
                      Model
                      ProfilingReport
                      Settings
                      StaticFiles

executable prof2json
  buildable:          False
  hs-source-dirs:     ., bin
  main-is:            prof2json.hs
  build-depends:      filepath
                    , mtl
                    , blaze-builder
                    , vector

source-repository head
  type:               git
  location:           git@github.com:maoe/tkyprof.git
