name:                 tkyprof
version:              0.0.6.1
license:              BSD3
license-file:         LICENSE
author:               Mitsutoshi Aoe
maintainer:           Mitsutoshi Aoe <maoe@foldr.in>
copyright:            Copyright (C) 2011 Mitsutoshi Aoe
synopsis:             A web-based visualizer for GHC Profiling Reports
description:          A web-based visualizer for GHC Profiling Reports
category:             Development
stability:            Experimental
cabal-version:        >= 1.6
build-type:           Simple
homepage:             https://github.com/maoe/tkyprof
bug-reports:          https://github.com/maoe/tkyprof/issues
tested-with:          GHC == 7.0.2

data-files:           static/js/d3.layout.min.js
                      static/js/d3.min.js
                      static/js/jquery.fileupload.js
                      static/js/jquery.iframe-transport.js
                      static/js/jquery.pjax.js
                      static/js/jquery.ui.widget.js
                      static/js/tkyprof.js
                      static/images/*.png
                      config/favicon.png

extra-source-files:   config/routes
                      hamlet/*.hamlet
                      julius/*.julius
                      lucius/*.lucius

flag production
  description:        Build the production executable.
  default:            True

flag devel
  description:        Build for use with "yesod devel"
  default:            False

executable tkyprof
  if flag(devel)
    buildable:        False

  if flag(production)
    ghc-options:      -O2
    cpp-options:      -DPRODUCTION

    -- ghc-options:    -pgmc g++ -pgml g++
    -- pkgconfig-depends: QtWebKit
    -- build-depends:  wai-handler-webkit

  main-is:            bin/tkyprof.hs
  hs-source-dirs:     ., config, bin
  other-modules:      Paths_tkyprof
  ghc-options:        -Wall -threaded
  build-depends:      base >= 4 && < 5
                    , aeson >= 0.3 && < 0.4
                    , attoparsec >= 0.9 && < 0.10
                    , attoparsec-enumerator >= 0.2 && < 0.3
                    , bytestring >= 0.9 && < 0.10
                    , cmdargs >= 0.7 && < 0.8
                    , containers < 0.5
                    , directory < 2
                    , enumerator >= 0.4 && < 0.5
                    , hamlet >= 0.8 && < 0.10
                    , rosezipper >= 0.2 && < 0.3
                    , stm < 3
                    , template-haskell < 3
                    , text >= 0.11 && < 0.12
                    , time >= 1.2 && < 1.3
                    , transformers >= 0.2 && < 0.3
                    , wai >= 0.4 && < 0.5
                    , wai-extra >= 0.4 && < 0.5
                    , warp >= 0.4 && < 0.5
                    , web-routes >= 0.23 && < 0.26
                    , yesod-core >= 0.8 && < 0.9
                    , yesod-form >= 0.1 && < 0.2
                    , yesod-json >= 0.1 && < 0.2
                    , yesod-static >= 0.1 && < 0.2

library
  if flag(devel)
    buildable:        True
  else
    buildable:        False
  exposed-modules:    Controller
  hs-source-dirs:     ., config, bin
  other-modules:      TKYProf
                      Handler.Home
                      Handler.Reports
                      Handler.Reports.Helpers
                      Model
                      Paths_tkyprof
                      ProfilingReport
                      Settings
                      StaticFiles

executable prof2json
  buildable:          False
  hs-source-dirs:     ., bin
  main-is:            prof2json.hs
  build-depends:      filepath
                    , mtl
                    , blaze-builder
                    , vector

source-repository head
  type:               git
  location:           git@github.com:maoe/tkyprof.git
