name:                 tkyprof
version:              0.2.2.2
license:              BSD3
license-file:         LICENSE
author:               Mitsutoshi Aoe
maintainer:           Mitsutoshi Aoe <maoe@foldr.in>
copyright:            Copyright (C) 2011-2014 Mitsutoshi Aoe
synopsis:             A web-based visualizer for GHC Profiling Reports
description:          A web-based visualizer for GHC Profiling Reports
category:             Development, Profiling
stability:            Experimental
cabal-version:        >= 1.6
build-type:           Simple
homepage:             https://github.com/maoe/tkyprof
bug-reports:          https://github.com/maoe/tkyprof/issues
tested-with:          GHC == 7.6.3

data-files:           static/js/d3.layout.min.js
                      static/js/d3.min.js
                      static/js/jquery.fileupload.js
                      static/js/jquery.iframe-transport.js
                      static/js/jquery.pjax.js
                      static/js/jquery.ui.widget.js
                      static/js/tkyprof.js
                      static/images/*.png
                      config/favicon.png
                      LICENSE
                      README.markdown

extra-source-files:   config/routes
                      templates/*.hamlet
                      templates/*.julius
                      templates/*.lucius

flag production
  description:        Build the production executable.
  default:            True

flag devel
  description:        Build for use with "yesod devel"
  default:            False

executable tkyprof
  if flag(devel)
    buildable:        False

  if flag(production)
    ghc-options:      -O2
    cpp-options:      -DPRODUCTION

    -- ghc-options:    -pgmc g++ -pgml g++
    -- pkgconfig-depends: QtWebKit
    -- build-depends:  wai-handler-webkit

  main-is:            bin/tkyprof.hs
  hs-source-dirs:     ., config, bin
  other-modules:      Paths_tkyprof
  ghc-options:        -Wall -threaded
  extensions:         TemplateHaskell
  build-depends:      base >= 4 && < 5
                    , aeson >= 0.3 && < 0.10
                    , attoparsec >= 0.9 && < 0.13
                    , conduit-extra >= 1.0 && < 1.2
                    , bytestring >= 0.9 && < 0.11
                    , cmdargs >= 0.7 && < 0.11
                    , containers < 0.6
                    , unordered-containers >= 0.2 && < 0.3
                    , directory < 2
                    , data-default < 0.6
                    , filepath >= 1.1 && < 2
                    , mtl >= 1.1 && < 3
                    , rosezipper >= 0.2 && < 0.3
                    , stm < 3
                    , exceptions >= 0.8 && < 1.0
                    , template-haskell < 3
                    , text >= 0.11 && < 1.3
                    , time >= 1.2 && < 1.6
                    , transformers >= 0.2 && < 0.5
                    , vector >= 0.6 && < 1
                    , wai >= 0.4 && < 3.1
                    , wai-extra >= 0.4 && < 3.2
                    , warp >= 0.4 && < 3.1
                    , web-routes >= 0.23 && < 0.28
                    , yesod >= 1.2 && < 1.5
                    , yesod-core >= 1.2 && < 1.5
                    , yesod-form >= 1.3 && < 1.5
                    , yesod-static >= 1.2 && < 1.6
                    , shakespeare >= 1.0 && < 2.1
                    , http-types >= 0.7 && < 1.0
                    , conduit >= 1.0 && < 1.3
                    , resourcet >= 0.4 && < 1.2

library
  if flag(devel)
    buildable:        True
  else
    buildable:        False
  exposed-modules:    Controller
  hs-source-dirs:     ., config, bin
  other-modules:      TKYProf
                      Handler.Home
                      Handler.Reports
                      Handler.Reports.Helpers
                      Model
                      Paths_tkyprof
                      ProfilingReport
                      Settings
                      StaticFiles

executable prof2json
  buildable:          False
  hs-source-dirs:     ., bin
  main-is:            prof2json.hs
  build-depends:      filepath
                    , mtl
                    , blaze-builder

source-repository head
  type:               git
  branch:             develop
  location:           https://github.com/maoe/tkyprof.git

source-repository this
  type:               git
  tag:                v0.2.2.2
  location:           https://github.com/maoe/tkyprof.git
